# BayesianNN

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bayesiannn/: constaints.py  distributions.py  mh.py
bayesiannn/app/: course.ipynb  main.py
bayesiannn/app/static/css/: index.css  results.css  style.css
bayesiannn/app/static/js/: index.js  results.js  scripts.js
bayesiannn/app/templates/: index.html  results.html
bayesiannn/models/: Unet.py  mlp.py  utils.py
bayesiannn/monte_carlo/: mc_integration.py  regression_example.py
bayesiannn/testing/: regression_example.py  test.py  train_mlp.py
